--- a/reference/ipso/ipso.cabal
+++ b/reference/ipso/ipso.cabal
@@ -16,14 +16,20 @@ category:            Language
 extra-source-files:  CHANGELOG.md
 
 library
-  exposed-modules:     Ipso.Syntax
+  exposed-modules:     Ipso.Parser
+                     , Ipso.Syntax
   build-depends:       base >=4.12 && <5
                      , bound
+                     , containers >= 0.6
                      , deriving-compat
+                     , parsers
+                     , sage
                      , text >= 1.2
                      , text-utf8
                      , vector
   hs-source-dirs:      src
+  default-extensions:  PackageImports
+
   default-language:    Haskell2010
 
 executable ipso
