--- a/ipso/Cargo.toml
+++ b/ipso/Cargo.toml
@@ -11,7 +11,9 @@ fixedbitset = "0.4.0"
 fnv = "1.0.7"
 lazy_static = "1.4.0"
 paste = "1.0.5"
+syntax = { path = "../syntax" }
 typed-arena = "2.0.1"
+util = { path = "../util" }
 
 [lib]
 name = "ipso"
