--- a/ipso/Cargo.toml
+++ b/ipso/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+core = { path = "../core" }
 diagnostic = { path = "../diagnostic" }
 fixedbitset = "0.4.0"
 fnv = "1.0.7"
