--- a/ipso/Cargo.toml
+++ b/ipso/Cargo.toml
@@ -7,17 +7,17 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-core = { path = "../core" }
-diagnostic = { path = "../diagnostic" }
 fnv = "1.0.7"
+ipso-core = { path = "../ipso-core" }
+ipso-diagnostic = { path = "../ipso-diagnostic" }
+ipso-lex = { path = "../ipso-lex" }
+ipso-parse = { path = "../ipso-parse" }
+ipso-rope = { path = "../ipso-rope" }
+ipso-syntax = { path = "../ipso-syntax" }
+ipso-util = { path = "../ipso-util" }
 lazy_static = "1.4.0"
-lex = { path = "../lex" }
-parse = { path = "../parse" }
 paste = "1.0.5"
-rope = { path = "../rope" }
-syntax = { path = "../syntax" }
 typed-arena = "2.0.1"
-util = { path = "../util" }
 
 [lib]
 name = "ipso"
