--- a/ipso-lex/Cargo.toml
+++ b/ipso-lex/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "syntax"
+name = "ipso-lex"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static = "1.4.0"
-util = { path = "../util" }
+ipso-syntax = { path = "../ipso-syntax" }
