--- a/ipso-syntax/Cargo.toml
+++ b/ipso-syntax/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "util"
+name = "ipso-syntax"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lazy_static = "1.4.0"
+ipso-util = { path = "../ipso-util" }
