--- a/ipso/Cargo.toml
+++ b/ipso/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 fnv = "1.0.7"
+ipso-builtins = { path = "../ipso-builtins" }
 ipso-core = { path = "../ipso-core" }
 ipso-diagnostic = { path = "../ipso-diagnostic" }
 ipso-lex = { path = "../ipso-lex" }
