--- a/ipso/Cargo.toml
+++ b/ipso/Cargo.toml
@@ -15,6 +15,7 @@ ipso-lex = { path = "../ipso-lex" }
 ipso-parse = { path = "../ipso-parse" }
 ipso-rope = { path = "../ipso-rope" }
 ipso-syntax = { path = "../ipso-syntax" }
+ipso-typecheck = { path = "../ipso-typecheck" }
 ipso-util = { path = "../ipso-util" }
 lazy_static = "1.4.0"
 paste = "1.0.5"
