project: factor out ipso-eval crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "ipso-builtins",
     "ipso-core",
     "ipso-diagnostic",
+    "ipso-eval",
     "ipso-lex",
     "ipso-parse",
     "ipso-rope",
