--- a/ipso-cli/Cargo.toml
+++ b/ipso-cli/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "ipso"
+path = "./src/main.rs"
+
 [dependencies]
 fnv = "1.0.7"
 ipso-builtins = { path = "../ipso-builtins" }
