--- a/tests/golden/ipso-golden.cabal
+++ b/tests/golden/ipso-golden.cabal
@@ -13,6 +13,7 @@ executable ipso-golden
                      , optparse-applicative
                      , process
                      , selective
+                     , temporary
                      , text
                      , vector
   default-language:    Haskell2010
