--- a/tests/common/ipso-tests-common.cabal
+++ b/tests/common/ipso-tests-common.cabal
@@ -15,6 +15,7 @@ library
                      , optparse-applicative
                      , process
                      , selective
+                     , temporary
                      , text
   default-language:    Haskell2010
   ghc-options:         -Wall -Werror
