ipso-{lex,parse,syntax}: implement 'let' and 'in' keywords and test Name::{from,to}_int

--- a/ipso-lex/Cargo.toml
+++ b/ipso-lex/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 
 [dependencies]
 ipso-syntax = { path = "../ipso-syntax" }
+quickcheck = { version = "1.0.3", default-features = false }
+
+[dev-dependencies]
+quickcheck_macros = "1"
