--- a/ipso-syntax/Cargo.toml
+++ b/ipso-syntax/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 [dependencies]
 lazy_static = "1.4.0"
 ipso-util = { path = "../ipso-util" }
+quickcheck = { version = "1.0.3", default-features = false }
