--- a/ipso-core/Cargo.toml
+++ b/ipso-core/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 [dependencies]
 ipso-syntax = { path = "../ipso-syntax" }
 ipso-util = { path = "../ipso-util" }
+typed-arena = "2.0.1"
