--- a/ipso-syntax/Cargo.toml
+++ b/ipso-syntax/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ipso-diagnostic = { path = "../ipso-diagnostic" }
 ipso-util = { path = "../ipso-util" }
 quickcheck = { version = "1.0.3", default-features = false }
 
