--- a/ipso-import/Cargo.toml
+++ b/ipso-import/Cargo.toml
@@ -12,3 +12,4 @@ ipso-parse = { path = "../ipso-parse" }
 ipso-rope = { path = "../ipso-rope" }
 ipso-syntax = { path = "../ipso-syntax" }
 ipso-typecheck = { path = "../ipso-typecheck" }
+ipso-util = { path = "../ipso-util" }
