--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "ipso-import",
     "ipso-lex",
     "ipso-parse",
+    "ipso-repl",
     "ipso-rope",
     "ipso-syntax",
     "ipso-typecheck",
