--- a/ipso-repl/Cargo.toml
+++ b/ipso-repl/Cargo.toml
@@ -3,6 +3,10 @@ name = "ipso-repl"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+ipso-core = { path = "../ipso-core" }
+ipso-diagnostic = { path = "../ipso-diagnostic" }
+ipso-eval = { path = "../ipso-eval" }
+ipso-syntax = { path = "../ipso-syntax" }
+ipso-typecheck = { path = "../ipso-typecheck" }
+typed-arena = "2.0.1"
