--- a/ipso-cli/Cargo.toml
+++ b/ipso-cli/Cargo.toml
@@ -20,6 +20,7 @@ ipso-eval = { path = "../ipso-eval" }
 ipso-import = { path = "../ipso-import" }
 ipso-lex = { path = "../ipso-lex" }
 ipso-parse = { path = "../ipso-parse" }
+ipso-repl = { path = "../ipso-repl" }
 ipso-rope = { path = "../ipso-rope" }
 ipso-syntax = { path = "../ipso-syntax" }
 ipso-typecheck = { path = "../ipso-typecheck" }
