--- a/ipso-cli/Cargo.toml
+++ b/ipso-cli/Cargo.toml
@@ -11,7 +11,6 @@ name = "ipso"
 path = "./src/main.rs"
 
 [dependencies]
-clap = { version = "^3.1", features = ["derive"] }
 fnv = "1.0.7"
 ipso-builtins = { path = "../ipso-builtins" }
 ipso-core = { path = "../ipso-core" }
@@ -28,6 +27,11 @@ ipso-util = { path = "../ipso-util" }
 lazy_static = "1.4.0"
 termion = "^1.5"
 typed-arena = "2.0.1"
+
+[dependencies.clap]
+version = "^3.1"
+default-features = false
+features = ["std", "derive"]
 
 [dev-dependencies]
 # Development build of v0.4, which has fewer dependencies.
