--- a/ipso-eval/Cargo.toml
+++ b/ipso-eval/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+fnv = "1.0.7"
 ipso-core = { path = "../ipso-core" }
 ipso-import = { path = "../ipso-import" }
 ipso-rope = { path = "../ipso-rope" }
