--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -17,10 +17,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: cachix/install-nix-action@v15
       - run: nix build ./site -o generated-site
-      - uses: actions/upload-pages-artifact@v0
+      - run: tar -vv --create --file gh-pages-${{ github.sha }}.tar --directory generated-site .
+      - uses: actions/upload-artifact@v3
         with:
-          path: "./generated-site"
-          retention-days: 1
+          name: site
+          path: gh-pages-${{ github.sha }}.tar
       - uses: actions/deploy-pages@v1
         id: deployment
         with:
