--- a/site/generator.cabal
+++ b/site/generator.cabal
@@ -7,7 +7,9 @@ executable generator
   main-is:          generator.hs
   build-depends:    
     base == 4.*,
+    filepath,
     hakyll == 4.15.*,
-    filepath
+    pandoc,
+    skylighting-core
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
