--- a/.github/workflows/ipso-cli.yml
+++ b/.github/workflows/ipso-cli.yml
@@ -72,6 +72,23 @@ jobs:
     runs-on: ubuntu-latest
    
     steps:
+    - uses: actions/checkout@v2.4.0
+
+    # Nix setup
+    - uses: cachix/install-nix-action@v15
+    - run: "sudo bash -c 'echo \"${{ secrets.NIX_SIGNING_KEY }}\" > /var/run/nix-signing-key'"
+    - run: sudo mkdir /var/root/.aws
+    - run: "sudo bash -c 'echo -e \"[default]\naws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}\naws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}\" > /var/root/.aws/credentials'"
+    - run: "sudo chmod +x $UPLOAD_TO_CACHE"
+
+    - name: Check release version
+      run: >
+        nix shell
+        --extra-substituters "s3://$BINARY_CACHE_BUCKET?scheme=https&endpoint=$BINARY_CACHE_ENDPOINT" 
+        --extra-trusted-public-keys "$NIX_PUBLIC_KEY"
+        --post-build-hook "$GITHUB_WORKSPACE/$UPLOAD_TO_CACHE"
+        -c .github/workflows/checkReleaseVersion
+
     - uses: actions/download-artifact@v3
       with:
         name: ipso-linux-x86_64
