--- a/site/generator.cabal
+++ b/site/generator.cabal
@@ -7,9 +7,11 @@ executable generator
   main-is:          generator.hs
   build-depends:    
     base == 4.*,
+    blaze-html,
     filepath,
     hakyll == 4.15.*,
     pandoc,
-    skylighting-core
+    skylighting-core,
+    time
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
