--- a/ipso-typecheck/Cargo.toml
+++ b/ipso-typecheck/Cargo.toml
@@ -13,3 +13,6 @@ ipso-diagnostic = { path = "../ipso-diagnostic" }
 ipso-rope = { path = "../ipso-rope" }
 ipso-syntax = { path = "../ipso-syntax" }
 ipso-util = { path = "../ipso-util" }
+
+[dev-dependencies]
+pretty_assertions = "1.3.0"
