--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,6 +31,15 @@ jobs:
         nix profile install github:LightAndLight/ipso
         --extra-substituters "s3://$BINARY_CACHE_BUCKET?scheme=https&endpoint=$BINARY_CACHE_ENDPOINT"
         --extra-trusted-public-keys "$NIX_PUBLIC_KEY"
+    
+    - run: which ipso
+    
+    - name: "blah"
+      run: >
+        nix build .#blah
+        --extra-substituters "s3://$BINARY_CACHE_BUCKET?scheme=https&endpoint=$BINARY_CACHE_ENDPOINT"
+        --extra-trusted-public-keys "$NIX_PUBLIC_KEY"
+        --post-build-hook "$GITHUB_WORKSPACE/$UPLOAD_TO_CACHE"
 
     - name: "cargo tests"
       run: >
