--- a/ipso-syntax/Cargo.toml
+++ b/ipso-syntax/Cargo.toml
@@ -11,4 +11,5 @@ ipso-util = { path = "../ipso-util" }
 quickcheck = { version = "1.0.3", default-features = false }
 
 [dev-dependencies]
+pretty_assertions = "1.3.0"
 quickcheck_macros = "1"
