build: cache crates.io index

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,19 @@ jobs:
         --extra-substituters "s3://$BINARY_CACHE_BUCKET?scheme=https&endpoint=$BINARY_CACHE_ENDPOINT"
         --extra-trusted-public-keys "$NIX_PUBLIC_KEY"
 
+    - name: cache .cargo
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-crates-io-index
+      with:
+        path: |
+          ~/.cargo/registry/index
+          ~/.cargo/registry/src
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('Cargo.lock') }}
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+
     - name: "cargo tests"
       run: >
         nix develop .#tests
