--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,7 +45,7 @@ jobs:
     - run: pueued -d
 
     - run: >
-        nix profile install github:LightAndLight/ipso?ref=d5afc4aa234b4a191550e1be3fb0b7aabc3c5a6c
+        nix profile install github:LightAndLight/ipso?ref=v0.3
         --extra-substituters "s3://$BINARY_CACHE_BUCKET?scheme=https&endpoint=$BINARY_CACHE_ENDPOINT"
         --extra-trusted-public-keys "$NIX_PUBLIC_KEY"
 
