--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,15 @@
 name: "tests"
+
 on:
+  # I don't think it's important for correctness to run the tests on main.
+  # I'm doing it to make GitHub Actions caches available across pull requests.
+  # See https://github.com/LightAndLight/ipso/issues/338
+  push:
+    branches:
+    - main
+  
   pull_request:
+
 env:
   NIX_PUBLIC_KEY: "ipso-binary-cache-1:UMRLNOKcCsb/a2dBhtcZhRZP4RN8yIDsSUwHTObu2w4="
 
