feat(vscode-ipso): add snippets

--- a/vscode-ipso/package.json
+++ b/vscode-ipso/package.json
@@ -12,17 +12,35 @@
     "Programming Languages"
   ],
   "contributes": {
-    "languages": [{
-      "id": "ipso",
-      "icon": { "light": "images/file-icon.png", "dark": "images/file-icon.png" },
-      "aliases": ["Ipso", "ipso"],
-      "extensions": [".ipso"],
-      "configuration": "./language-configuration.json"
-    }],
-    "grammars": [{
-      "language": "ipso",
-      "scopeName": "source.ipso",
-      "path": "./syntaxes/ipso.tmLanguage.json"
-    }]
+    "languages": [
+      {
+        "id": "ipso",
+        "icon": {
+          "light": "images/file-icon.png",
+          "dark": "images/file-icon.png"
+        },
+        "aliases": [
+          "Ipso",
+          "ipso"
+        ],
+        "extensions": [
+          ".ipso"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "ipso",
+        "scopeName": "source.ipso",
+        "path": "./syntaxes/ipso.tmLanguage.json"
+      }
+    ],
+    "snippets": [
+      {
+        "language": "ipso",
+        "path": "./snippets/ipso.json"
+      }
+    ]
   }
 }
