build: fix `nix profile install`

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,9 @@ env:
   # limiting](https://discourse.nixos.org/t/flakes-provide-github-api-token-for-rate-limiting/18609)
   # by allowing Nix to make authenticated GitHub requests.
   NIX_CONFIG: "access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}"
+
+  # The version of ipso to use for CI scripts that are written in the language.
+  IPSO_PACKAGE: "github:LightAndLight/ipso?commit=24f53253a49172b47c228c237a749f0ab120730c"
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -53,14 +56,24 @@ jobs:
 
     # Used in `postBuildHook`.
     - run: sudo cp .github/workflows/uploadToCache /run/uploadToCache
-
+    
+    # [note: nix profile install not adding to PATH]
+    #
+    # `nix profile install nixpkgs#pueue` used to "just work", but on 2023-03-02 I started getting
+    # `pueued: command not found` errors. So add it to the path manually.
+    #
+    # [Docs for `GITHUB_PATH`](https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#adding-a-system-path)
     - run: nix profile install nixpkgs#pueue
+    - run: "echo \"$(nix path-info nixpkgs#pueue)/bin\" >> $GITHUB_PATH"
+    
     - run: pueued -d
 
+    # See [note: nix profile install not adding to PATH]
     - run: >
-        nix profile install github:LightAndLight/ipso?commit=24f53253a49172b47c228c237a749f0ab120730c
+        nix profile install $IPSO_PACKAGE
         --extra-substituters "s3://$BINARY_CACHE_BUCKET?scheme=https&endpoint=$BINARY_CACHE_ENDPOINT"
         --extra-trusted-public-keys "$NIX_PUBLIC_KEY"
+    - run: "echo \"$(nix path-info $IPSO_PACKAGE)/bin\" >> $GITHUB_PATH"
 
     - name: cache .cargo
       uses: actions/cache@v3
