--- a/.github/workflows/ipso-cli.yml
+++ b/.github/workflows/ipso-cli.yml
@@ -73,6 +73,10 @@ jobs:
       if: always()
       run: pueue wait
 
+    - name: log all uploads
+      if: always()
+      run: pueue log --json | jq '.[].task.original_command' -r
+
     - name: log failed uploads
       if: always()
       run: pueue log --json | jq 'to_entries[] | select(.value.task.status.Done != "Success") | .key' -r | xargs -r pueue log
@@ -139,6 +143,10 @@ jobs:
     - name: wait for uploads to finish
       if: always()
       run: pueue wait
+
+    - name: log all uploads
+      if: always()
+      run: pueue log --json | jq '.[].task.original_command' -r
 
     - name: log failed uploads
       if: always()
@@ -221,6 +229,10 @@ jobs:
     - name: wait for uploads to finish
       if: always()
       run: pueue wait
+
+    - name: log all uploads
+      if: always()
+      run: pueue log --json | jq '.[].task.original_command' -r
 
     - name: log failed uploads
       if: always()
