--- a/.github/workflows/ipso-cli.yml
+++ b/.github/workflows/ipso-cli.yml
@@ -18,7 +18,7 @@ env:
   NIX_CONFIG: "access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}"
 
   # The version of ipso to use for CI scripts that are written in the language.
-  IPSO_PACKAGE: "github:LightAndLight/ipso?commit=2a6837f560d902f70c7bb2eecf7eeff822ee6030"
+  CI_IPSO_VERSION: "v0.5"
 jobs:
   build-linux:
     runs-on: ubuntu-latest
@@ -49,18 +49,19 @@ jobs:
     # Used in `postBuildHook`.
     - run: sudo cp $UPLOAD_TO_CACHE /run/uploadToCache
 
+    # See [note: installing Ipso binary]
+    - run: mkdir -p $HOME/bin
+    - run: >
+        curl -L
+        "https://github.com/LightAndLight/ipso/releases/download/$CI_IPSO_VERSION/ipso-linux-x86_64"
+        > $HOME/bin/ipso
+    - run: chmod +x $HOME/bin/ipso
+    - run: echo "$HOME/bin" >> $GITHUB_PATH
+
     # See [note: nix profile install not adding to PATH]
     - run: nix profile install nixpkgs#pueue
     - run: "echo \"$(nix path-info nixpkgs#pueue)/bin\" >> $GITHUB_PATH"
-
     - run: pueued -d
-
-    # See [note: nix profile install not adding to PATH]
-    - run: >
-        nix profile install $IPSO_PACKAGE
-        --extra-substituters "s3://$BINARY_CACHE_BUCKET?scheme=https&endpoint=$BINARY_CACHE_ENDPOINT"
-        --extra-trusted-public-keys "$NIX_PUBLIC_KEY"
-    - run: "echo \"$(nix path-info $IPSO_PACKAGE)/bin\" >> $GITHUB_PATH"
 
     - run: >
         nix build
@@ -120,18 +121,19 @@ jobs:
     # Used in `postBuildHookMacos`.
     - run: sudo cp $UPLOAD_TO_CACHE /var/run/uploadToCache
 
+    # See [note: installing Ipso binary]
+    - run: mkdir -p $HOME/bin
+    - run: >
+        curl -L
+        "https://github.com/LightAndLight/ipso/releases/download/$CI_IPSO_VERSION/ipso-macos-x86_64"
+        > $HOME/bin/ipso
+    - run: chmod +x $HOME/bin/ipso
+    - run: echo "$HOME/bin" >> $GITHUB_PATH
+
     # See [note: nix profile install not adding to PATH]
     - run: nix profile install nixpkgs#pueue
     - run: "echo \"$(nix path-info nixpkgs#pueue)/bin\" >> $GITHUB_PATH"
-
     - run: pueued -d
-
-    # See [note: nix profile install not adding to PATH]
-    - run: >
-        nix profile install $IPSO_PACKAGE
-        --extra-substituters "s3://$BINARY_CACHE_BUCKET?scheme=https&endpoint=$BINARY_CACHE_ENDPOINT"
-        --extra-trusted-public-keys "$NIX_PUBLIC_KEY"
-    - run: "echo \"$(nix path-info $IPSO_PACKAGE)/bin\" >> $GITHUB_PATH"
 
     - run: >
         nix build
@@ -197,18 +199,19 @@ jobs:
     # Used in `postBuildHook`.
     - run: sudo cp $UPLOAD_TO_CACHE /run/uploadToCache
 
+    # See [note: installing Ipso binary]
+    - run: mkdir -p $HOME/bin
+    - run: >
+        curl -L
+        "https://github.com/LightAndLight/ipso/releases/download/$CI_IPSO_VERSION/ipso-linux-x86_64"
+        > $HOME/bin/ipso
+    - run: chmod +x $HOME/bin/ipso
+    - run: echo "$HOME/bin" >> $GITHUB_PATH
+
     # See [note: nix profile install not adding to PATH]
     - run: nix profile install nixpkgs#pueue
     - run: "echo \"$(nix path-info nixpkgs#pueue)/bin\" >> $GITHUB_PATH"
-
     - run: pueued -d
-
-    # See [note: nix profile install not adding to PATH]
-    - run: >
-        nix profile install $IPSO_PACKAGE
-        --extra-substituters "s3://$BINARY_CACHE_BUCKET?scheme=https&endpoint=$BINARY_CACHE_ENDPOINT"
-        --extra-trusted-public-keys "$NIX_PUBLIC_KEY"
-    - run: "echo \"$(nix path-info $IPSO_PACKAGE)/bin\" >> $GITHUB_PATH"
 
     - name: Check release version
       run: >
